[MSE][GStreamer] Early flushes may deadlock on FLUSH_STOP https://bugs.webkit.org/show_bug.cgi?id=272975

Reviewed by NOBODY (OOPS!).

WIP patch for fixing early flush race conditions.
This synchronizes webkitmediasrc with the playsink to only allow FLUSH_START
to be sent once both STREAM_START has been handled in the playsink, and when
playsink has also emitted the pads for each stream out of webkitmediasrc.

This is only a work-in-progress as a result of experimentation and debugging
this issue. It needs to be refactored and probably have the code moved to avoid
layering violations.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):
(WebCore::MediaPlayerPrivateGStreamer::addPlaysinkQuirksForEarlyMediaSourceFlushes):
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:
* Source/WebCore/platform/graphics/gstreamer/mse/WebKitMediaSourceGStreamer.cpp:
(WebKitMediaSrcPrivate::EarlyFlushQuirk::numStreamStarts):
(WebKitMediaSrcPrivate::EarlyFlushQuirk::numCaps):
(WebKitMediaSrcPrivate::EarlyFlushQuirk::hasStreamStart):
(WebKitMediaSrcPrivate::EarlyFlushQuirk::hasCapsNotification):
(webKitMediaSrcTearDownStream):
(webKitMediaSrcLoop):
(webKitMediaSrcNotifyStreamStart):
(webKitMediaSrcNotifyCaps):
(waitForEarlyFlushConditions):
(webKitMediaSrcStreamFlush):
* Source/WebCore/platform/graphics/gstreamer/mse/WebKitMediaSourceGStreamer.h: