Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h
@@ -538,6 +538,8 @@ private:
     void configureMediaStreamAudioTracks();
     void invalidateCachedPositionOnNextIteration() const;
 
+    void addPlaysinkQuirksForEarlyMediaSourceFlushes();
+
     Atomic<bool> m_isPlayerShuttingDown;
     GRefPtr<GstElement> m_textSink;
     GUniquePtr<GstStructure> m_mediaLocations;
